--- a/sections/template-customer-order.liquid
+++ b/sections/template-customer-order.liquid
@@ -116,7 +116,7 @@
             <p>{{ credit_card_company }}</p>
             <p>{{ credit_card_last_four_digits }}</p>
 
-            <div class="bg-gray-700 rounded-full text-sm px-4 py-1 text-white">{{ transaction.status_label }}</div>
+            <div class="bg-gray-700 rounded-full text-sm px-4 py-1">{{ transaction.status_label }}</div>
 
           {% else %}
             <p class="text-small mb-4">This order is manually placed by {{ shop.name }}</p>
