--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -17,10 +17,16 @@
             <div class="relative flex flex-col text-center border p-2">
               {% if address == customer.default_address %}
                 <span class="text-xs font-medium text-white bg-green-700 px-4 py-2">Default</span>
-                
               {% endif %}
-            
 
+              <div class="my-8 h-full">
+                {{ address | format_address }}
+              </div>
+
+              <div class="flex flex-row gap-2">
+                <button class="w-full text-xs text-white bg-gray-700 hover:bg-gray-900 font-medium py-2">Edit</button>
+                <button class="w-full text-xs font-medium text-gray-700 border py-2">Delete</button>
+              </div>
             </div>
           </div>
         {% endfor %}
