--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -192,7 +192,13 @@
     }
 
     initCustomerAddress() {
-      console.log("Hello World")
+      const allAddressesSelector = document.querySelectorAll('select[data-country-selector]')
+
+      if (allAddressesSelector.length < 1) return;
+      
+      console.log(allAddressesSelector);
+      
+
 
     }
 
