--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -106,10 +106,10 @@
             id="address_country_{{ form.id }}"
             value="{{ form.country }}"
             class="w-full text-gray-700 border px-4 py-3 focus:outline-none"
+            data-id
             data-country-selector
           >
             {{ all_country_option_tags }}
-
           </select>
         </div>
 
@@ -152,7 +152,9 @@
         </div>
 
         <div class="flex flex-row gap-2">
-          <button type="submit" class="w-full font-medium text-white bg-gray-700 hover:bg-gray-900 px-4 py-2">Create address</button>
+          <button type="submit" class="w-full font-medium text-white bg-gray-700 hover:bg-gray-900 px-4 py-2">
+            Create address
+          </button>
           <button type="reset" class="w-full font-medium text-gray-700 border border-gray-700 px-4 py-2">Cancel</button>
         </div>
       {% endform %}
@@ -185,25 +187,73 @@
   </div>
 </div>
 
-
 <script>
   class CustomerAddress {
     constructor() {
       this.initCustomerAddress();
-
+      this.customerAddressesSelector();
     }
 
     initCustomerAddress() {
-      const allAddressesSelector = document.querySelectorAll('select[data-country-selector]')
+      const allAddressesSelector = document.querySelectorAll('select[data-country-selector]');
 
       if (allAddressesSelector.length < 1) return;
-      
-      console.log(allAddressesSelector);
-      
 
+      allAddressesSelector.forEach((select) => {
+        var selectedCountry = this.getSelectedCountry(select);
 
+        if (!selectedCountry) return;
+
+        var provinces = selectedCountry.dataset.provinces;
+        var arrayOfProvince = JSON.parse(provinces);
+
+        var provinceSelector = document.querySelector(`#address_province_${select.dataset.id}`);
+
+        if (arrayOfProvince.length < 1) {
+          provinceSelector.setAttribute('disabled', 'disabled');
+        } else {
+          provinceSelector.removeAttribute('disabled');
+        }
+
+        provinceSelector.innerHTML = '';
+        var options = '';
+
+        for (var index = 0; index < arrayOfProvince; index++) {
+          if (arrayOfProvince[index][0] === provinceSelector.getAttribute('value')) {
+            options += `<option value="${arrayOfProvince[i][0]}" selected>${arrayOfProvince[index][0]}</option>`;
+          } else {
+            options += `<option value="${arrayOfProvince[i][0]}">${arrayOfProvince[index][0]}</option>`;
+          }
+        }
+        provinceSelector.innerHTML = options;
+      });
     }
 
+    getSelectedCountry(select) {
+      var option, selectedOption;
+      for (var index = 0; index < select.options.length; index++) {
+        option = select.options[index];
+
+        if (option.value === select.getAttribute('value')) {
+          seletedOption = option;
+          selectedOption.setAttribute('selected', 'selected');
+          break;
+        }
+      }
+
+      return selectedOption;
+    }
+
+    customerAddressesSelector() {
+      const addressesSelector = document.querySelectorAll('select[data-country-selector]');
+      if (addressesSelector.length < 1) return;
+
+      addressesSelector.forEach((select) => {
+        select.addEventListener('change', function (e) {
+          console.log('Hello Again');
+        });
+      });
+    }
   }
 
   const customerAddress = new CustomerAddress();
