--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -250,7 +250,8 @@
 
       addressesSelector.forEach((select) => {
         select.addEventListener('change', function (e) {
-          console.log('Hello Again');
+          var provinces = this.options[this.selectedIndex].dataset.provinces;
+          console.log(provinces);
         });
       });
     }
