--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -251,7 +251,23 @@
       addressesSelector.forEach((select) => {
         select.addEventListener('change', function (e) {
           var provinces = this.options[this.selectedIndex].dataset.provinces;
-          console.log(provinces);
+          var arrayOfProvince = JSON.parse(provinces);
+          var provinceSelector = document.querySelector(`#address_province_${this.dataset.id}`);
+
+          if(arrayOfProvince.length < 1) {
+            provinceSelector.setAttribute('disabled', disabled);
+          } else {
+            provinceSelector.removeAttribute('disabled');
+          }
+
+          provinceSelector.innerHTML = '';
+          for(var index = 0; index < arrayOfProvince.length; index++) {
+            options += `<option value=${arrayOfProvince[index][0]}">${arrayOfProvince[index][0]}</option>`
+          }
+
+          provinceSelector.innerHTML = options;
+
+
         });
       });
     }
