--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -200,7 +200,7 @@
                 {% form 'customer_address', address %}
                   <div class="mb-4">
                     <label for="address_fname_{{ form.id }}" class="uppercase text-gray-700 text-xs font-medium mb-2"
-                      >First name</label
+                      >First name:</label
                     >
                     <input
                       type="text"
