--- a/sections/template-customer-addresses.liquid
+++ b/sections/template-customer-addresses.liquid
@@ -394,7 +394,11 @@
       deleteButtons.forEach((button) => {
         button.addEventListener('click', function (e) {
           var url = this.dataset.url;
-          document.querySelector(`form[action="${url}"]`).submit();
+          var confirmation = window.confirm('Do you really want to delete this address?');
+
+          if (confirmation) {
+            document.querySelector(`form[action="${url}"]`).submit();
+          }
         });
       });
     }
