--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -242,17 +242,23 @@
 </script>
 
 <script>
-  const swiper = new Swiper('.swiper', {
-    direction: 'horizontal',
+  document.addEventListener('DOMContentLoaded', function () {
+    try {
+      const swiper = new Swiper('.swiper', {
+        direction: 'horizontal',
 
-    pagination: {
-      el: '.swiper-pagination',
-    },
+        pagination: {
+          el: '.swiper-pagination',
+        },
 
-    navigation: {
-      prevEl: '.swiper-button-prev',
-      nextEl: '.swiper-button-next',
-    },
+        navigation: {
+          prevEl: '.swiper-button-prev',
+          nextEl: '.swiper-button-next',
+        },
+      });
+    } catch (e) {
+      console.log(e);
+    }
   });
 </script>
 
