--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -47,11 +47,11 @@
       </div>
 
       <div class="md:hidden">
-        <div class="swiper h-94" id="swipe">
+        <div class="swiper" id="swipe">
           <div class="swiper-wrapper">
             {% for media in product.media %}
               <div class="swiper-slide">
-                <div class="h-80 overflow-hidden p-2">
+                <div class="h-[100vw] overflow-hidden p-2">
                   {% render 'product-media', media: media %}
                 </div>
               </div>
