--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -15,7 +15,26 @@
     {{ media | video_tag: controls: true, class: 'w-full h-full object-cover' }}
 
   {% when 'model' %}
-    {{ media | model_viewer_tag }}
+    <product-model>
+      <div>
+        <button class="w-full h-full bg-gray-100 border relative">
+          <span class="border bg-gray-100 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">{% render 'model-viewer-icon' %}</span>
+          <img
+            src="{{ media | image_url }}"
+            alt="{{ media.preview_image.alt }}"
+            class="w-full h-full object-cover"
+            width=""
+            height=""
+          >
+        </button>
+      </div>
+
+      <template>
+        {{ media | model_viewer_tag: reveal: 'interaction' }}
+      </template>
+
+
+    </product-model>
 
   {% else %}
     {{ media | media_tag }}
