--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -3,6 +3,8 @@
 
 {% assign selected_variant = product.selected_or_first_available_variant %}
 
+<script src="{{ 'product-model.js' | asset_url }}" defer></script>
+
 <style>
   .swiper-button-prev,
   .swiper-button-next {
@@ -178,7 +180,10 @@
         <div class="relative">
           <div class="flex justify-between items-start p-5 border-b">
             <h2 class="text-xl font-bold text-gray-700">3D Model Preview</h2>
-            <button x-on:click="productModalOpen = false" class="text-gray-400 bg-transparent hover:text-gray-700 rounded text-sm p-2 ml-auto inline-flex items-center">
+            <button
+              x-on:click="productModalOpen = false"
+              class="text-gray-400 bg-transparent hover:text-gray-700 rounded text-sm p-2 ml-auto inline-flex items-center"
+            >
               {% render 'close-icon' %}
             </button>
           </div>
