--- a/snippets/product-media.liquid
+++ b/snippets/product-media.liquid
@@ -17,7 +17,11 @@
   {% when 'model' %}
     <product-model data-media-id="{{ media.id }}">
       <div>
-        <button x-on:click="productModalOpen = true" class="w-full h-full bg-gray-100 border relative">
+        <button
+          id="productModalOpenButton_{{ media.id }}"
+          x-on:click="productModalOpen = true"
+          class="w-full h-full bg-gray-100 border relative"
+        >
           <span class="border bg-gray-100 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2">
             {% render 'model-viewer-icon' %}
           </span>
