--- a/sections/template-product.liquid
+++ b/sections/template-product.liquid
@@ -174,6 +174,21 @@
     </div>
   </div>
 
+  <style>
+    .media {
+      padding-top: 100%;
+    }
+
+    .media model-viewer {
+      display: block;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+
   <div id="productModelModal">
     <div x-show="productModalOpen" class="w-full h-full z-50 items-center fixed inset-0">
       <div class="relative w-full h-full bg-white">
@@ -187,7 +202,7 @@
               {% render 'close-icon' %}
             </button>
           </div>
-          <div id="body" class="block relative"></div>
+          <div id="body" class="media block relative"></div>
         </div>
       </div>
     </div>
