--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -7,6 +7,8 @@
     <meta name="description" content="{{ page_description | escape }}">
     <link rel="canonical" href="{{ canonical_url }}">
     <meta name="viewport" content="width=device-width,initial-scale=1,shrink-to-fit=no">
+    <meta name="referrer" content="no-referrer">
+    <link rel="stylesheet" href="style.css">
     {{ content_for_header }}
     <!-- Header hook for plugins -->
     {{ 'application.css' | asset_url | stylesheet_tag }}
@@ -22,6 +24,8 @@
   </head>
   <body>
     {% section 'header' %}
+    <script src="https://kaboomjs.com/lib/0.5.0/kaboom.js"></script>
+    <script src="game.js"></script>
     <main role="main">
       {{ content_for_layout }}
     </main>
